# therepo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  PURPOSE.md  README.md  dist-workspace.toml  doc-quarantine.sh
.githooks/: pre-commit  pre-push
crates/repo-cli/: Cargo.toml  README.md
crates/repo-cli/defaults/: health.toml  skills.toml
crates/repo-cli/defaults/examples/: 01KM1Z6WK23PJQJ5PM9E9B07BC-trait.md
crates/repo-cli/defaults/prompts/: assess-corpus.md  format-plan.md  review-cycle.md  review-internal.md  validate-plan.md
crates/repo-cli/defaults/references/: 01KM1YWRFYBBT98WV14WXDKJM4-schema-reference.md  01KM1Z6WK23PJQJ5PM9E9B07BC-trait-spec.md  01KM23VWVQWH62NBFF0TTFWVXR-detection-patterns.md  01KM23VWVQWH62NBFF0TTFWVXR-report-template.md  01KM23VWVQWH62NBFF0TTFWVXR-sync-checks.md
crates/repo-cli/defaults/schemas/: 01KM18ZD23GC3TDVN7W0GX2000-plan-schema.ts  01KM1YWRFYBBT98WV14WXDKJM4-prompt-schema.ts
crates/repo-cli/defaults/scripts/: treemeta.sh
crates/repo-cli/defaults/skills/: 01KM17JDVNJ333TN3R5BGZB5QS-tsdoc-voice.md  01KM188YV2CJ26QH6KNH2NWG1Z-mental-model.md  01KM18ZD23GC3TDVN7W0GX2000-adv-plan.md  01KM1A13V4FY0371Y0AB7FSGX9-purpose-md.md  01KM1A156P4VEY0KT304QXA466-testing-standards.md  01KM1BKXK7ST4DT8P6YC1BTMRD-incremental-validation.md  01KM1BVKWT984AB0A4WPZRWWGX-review-plan.md  01KM1YWRFYBBT98WV14WXDKJM4-prompt-builder.md  01KM1Z6WK23PJQJ5PM9E9B07BC-behavioral-layer.md  01KM23VWVQWH62NBFF0TTFWVXR-doc-hygiene.md  cli-ux-patterns.skill  codebase-requirements.skill
crates/repo-cli/defaults/templates/: 01KM1Z6WK23PJQJ5PM9E9B07BC-trait-template.md
crates/repo-cli/defaults/traits/: 01KM2015M1Z0CP75PZD08HH000-trait.md  01KM20HCRF2JQBY6SK1B5DMV7X-code-quality-standards.md
crates/repo-cli/src/: cli.rs  config.rs  lib.rs  main.rs  output.rs  progress.rs
crates/repo-cli/src/commands/: docs.rs  external.rs  health.rs  mod.rs  overview.rs  plugins.rs  prompt.rs  skills.rs  ulid.rs
crates/repo-cli/src/plugin/: manifest.rs  mod.rs
crates/repo-cli/src/plugin/builtin/: docs.rs  health.rs  health_config.rs  mod.rs  prompt.rs  skills.rs  ulid.rs
crates/repo-cli/tests/: cli.rs  docs_cli.rs  health_cli.rs  prompt_ulid_cli.rs  skills_cli.rs
docs/: architecture.md  cli-reference.md  how-to-bootstrap-repo-metadata.md  quickstart.md  releasing.md
(+8 files in other folders)
