[package]
name = "repo"
version = "0.1.0"
edition = "2024"
description = "General-purpose repository maintenance CLI with plugin system"

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = "1"

[lints.rust]
future-incompatible = "warn"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }
