[package]
name = "therepo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["therepo contributors"]
description = "General-purpose repository maintenance CLI with plugin system"
readme = "README.md"
documentation = "https://docs.rs/therepo"
license = "MIT OR Apache-2.0"
keywords = ["repo", "cli", "docs", "tooling", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = "1"

[lints.rust]
future-incompatible = "warn"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }
